--- a/camera/build.gradle
+++ b/camera/build.gradle
@@ -34,3 +34,20 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 }
+apply plugin: 'com.novoda.bintray-release'//添加
+
+def siteUrl = 'https://github.com/用户名/项目名'//例如
+publish {
+    repoName = 'ZhongWangMaven'//远程仓库名字,不指明，默认是上传到maven
+    userOrg = 'zw21544182'//bintray.com的用户名
+    groupId = 'li.camera'//项目包名
+    artifactId = 'CamearHelp'//在Jfrog上新建项目名称（包名，不是仓库名）
+    publishVersion = '1.0.0'//在Jfrog上新建时的版本号
+    desc = '基于camear2拍照'//描述，不重要
+    website = siteUrl//项目主页
+}
+tasks.withType(Javadoc) {//防止编码问题
+    options.addStringOption('Xdoclint:none', '-quiet')
+    options.addStringOption('encoding', 'UTF-8')
+    options.addStringOption('charSet', 'UTF-8')
+}
