--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation project(':camera')
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation project(':filedirchoose')
 }
